feat: slides update

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-"name": "OSDC Virtual Summit 2020",
-"short_name": "OSDC Virtual",
+"name": "Correspondent Annual Meeting 2020",
+"short_name": "Corresponden",
 "display": "standalone",
 "theme_color": "#ffffff",
 "background_color": "#ffffff",
